src/snapshots/rlox__test_runtime__global_declaration_without_identifier.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var 1;\n        \")"
---
stdout:


stderr:
Error: Parse error
   ╭─[<unknown>:2:12]
   │
 2 │         var 1;
   │             ┬  
   │             ╰── Expected identifier
───╯


